[gd_scene load_steps=16 format=3 uid="uid://6dlh0wlnsedb"]

[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueInput/que_input_control.gd" id="1_bqb47"]
[ext_resource type="Texture2D" uid="uid://clb0p8uenqo8c" path="res://Scenes/Combat/UiNodes/QueInput/PopUpButton.png" id="2_7xk62"]
[ext_resource type="Script" path="res://Scenes/UiNodes/back_patch_container.gd" id="2_ir7m8"]
[ext_resource type="Texture2D" uid="uid://cdot2t5117n5f" path="res://Scenes/Combat/UiNodes/QueInput/ScrollPatch.png" id="3_2484v"]
[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueInput/stat_button_control.gd" id="3_pfyt3"]
[ext_resource type="Theme" uid="uid://cayt153s5ro4a" path="res://Scenes/Themes/standard_theme_red.tres" id="3_u12om"]
[ext_resource type="PackedScene" uid="uid://cpy0gmuoekexl" path="res://Scenes/Combat/UiNodes/QueInput/que_input_button_control.tscn" id="6_ua6n5"]
[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueDisplay/que_display_control.gd" id="9_o02vd"]
[ext_resource type="Texture2D" uid="uid://dgfxtmtdjfgey" path="res://assets/Sprites/UI/QuePathArrow.png" id="10_ruo2m"]
[ext_resource type="Texture2D" uid="uid://e71sf31qf71e" path="res://Scenes/Combat/UiNodes/QueDisplay/QueDisplayBackground.png" id="11_quda2"]
[ext_resource type="Texture2D" uid="uid://do85dvxvlf5wk" path="res://defs/Actors/Squirrels/Squirrcerer_IconSmall.png" id="12_cgpwr"]
[ext_resource type="Script" path="res://Scenes/Combat/UiNodes/QueInput/QueDisplayButton.gd" id="18_8nhhy"]
[ext_resource type="Texture2D" uid="uid://cr1m3llr0pgtd" path="res://Scenes/Combat/UiNodes/QueDisplay/EmptySlotBackground.png" id="19_d7qpq"]
[ext_resource type="Texture2D" uid="uid://dq2fpuokt1s5r" path="res://Scenes/Combat/UiNodes/QueDisplay/SlotBackground.png" id="19_gjejj"]
[ext_resource type="Texture2D" uid="uid://bu1v4w3d6hau" path="res://Scenes/Combat/UiNodes/QueDisplay/FilledSlotBackground.png" id="20_k35kq"]

[node name="QueInputControl" type="Control" node_paths=PackedStringArray("que_display_control", "back_patch", "main_container", "page_button_prefab", "start_label", "side_start_button", "top_start_button")]
custom_minimum_size = Vector2(124, 80)
layout_mode = 3
anchors_preset = 0
offset_right = 392.0
offset_bottom = 96.0
script = ExtResource("1_bqb47")
que_display_control = NodePath("BackPatchContainer/Control/QueDisplayControl")
back_patch = NodePath("BackPatchContainer")
main_container = NodePath("BackPatchContainer/HBoxContainer")
page_button_prefab = NodePath("BackPatchContainer/HBoxContainer/HBoxContainer/QueInputButtonControl")
start_label = NodePath("BackPatchContainer/Control/SideStatButtonControl/TextureRect/Label")
side_start_button = NodePath("BackPatchContainer/Control/SideStatButtonControl")
top_start_button = NodePath("BackPatchContainer/Control/TopStatButtonControl")

[node name="BackPatchContainer" type="Container" parent="." node_paths=PackedStringArray("background", "inner_container")]
custom_minimum_size = Vector2(108, 80)
layout_mode = 0
offset_left = 131.2
offset_right = 239.2
offset_bottom = 80.0
scale = Vector2(1.2, 1.2)
script = ExtResource("2_ir7m8")
background = NodePath("Background")
inner_container = NodePath("HBoxContainer")
sides_padding = 14
center_in_parent = true

[node name="Control" type="Control" parent="BackPatchContainer"]
layout_mode = 2

[node name="QueDisplayControl" type="Control" parent="BackPatchContainer/Control" node_paths=PackedStringArray("portrait", "main_container", "premade_que_button", "slots_container")]
layout_mode = 3
anchors_preset = 0
offset_left = 2.0
offset_top = -68.0
offset_right = 118.0
offset_bottom = -4.0
script = ExtResource("9_o02vd")
portrait = NodePath("BackPatchContainer/HBoxContainer/PortraitTextureRect")
main_container = NodePath("BackPatchContainer/HBoxContainer")
premade_que_button = NodePath("BackPatchContainer/HBoxContainer/SlotsContainer/QueDisplayButton")
slots_container = NodePath("BackPatchContainer/HBoxContainer/SlotsContainer")
show_gaps = true

[node name="QuePathArrow" type="Sprite2D" parent="BackPatchContainer/Control/QueDisplayControl"]
visible = false
texture = ExtResource("10_ruo2m")

[node name="BackPatchContainer" type="Container" parent="BackPatchContainer/Control/QueDisplayControl" node_paths=PackedStringArray("background", "inner_container")]
custom_minimum_size = Vector2(120, 64)
layout_mode = 0
offset_right = 120.0
offset_bottom = 64.0
script = ExtResource("2_ir7m8")
background = NodePath("Background")
inner_container = NodePath("HBoxContainer")
margin_override = 8

[node name="Background" type="NinePatchRect" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer"]
layout_mode = 2
texture = ExtResource("11_quda2")
patch_margin_left = 61
patch_margin_top = 32
patch_margin_right = 12
patch_margin_bottom = 32

[node name="HBoxContainer" type="HBoxContainer" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer"]
layout_mode = 2

[node name="PortraitTextureRect" type="TextureRect" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer/HBoxContainer"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture = ExtResource("12_cgpwr")

[node name="ColorRect" type="ColorRect" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer/HBoxContainer"]
layout_mode = 2

[node name="SlotsContainer" type="HBoxContainer" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="QueDisplayButton" type="Control" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer/HBoxContainer/SlotsContainer" node_paths=PackedStringArray("background", "page_icon", "button")]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
script = ExtResource("18_8nhhy")
background = NodePath("Background")
page_icon = NodePath("PageIcon")
button = NodePath("Button")
empty_background_texture = ExtResource("19_d7qpq")
gap_background_texture = ExtResource("19_gjejj")
filled_background_texture = ExtResource("20_k35kq")

[node name="Background" type="TextureRect" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer/HBoxContainer/SlotsContainer/QueDisplayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("19_d7qpq")

[node name="PageIcon" type="TextureRect" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer/HBoxContainer/SlotsContainer/QueDisplayButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="BackPatchContainer/Control/QueDisplayControl/BackPatchContainer/HBoxContainer/SlotsContainer/QueDisplayButton"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="SideStatButtonControl" type="Control" parent="BackPatchContainer/Control" node_paths=PackedStringArray("button_texture", "button")]
show_behind_parent = true
clip_contents = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -9.0
offset_top = 8.0
offset_right = 119.0
offset_bottom = 72.0
grow_horizontal = 0
script = ExtResource("3_pfyt3")
grow_speed = 300.0
button_texture = NodePath("TextureRect")
button = NodePath("TextureRect/Button")

[node name="TextureRect" type="TextureRect" parent="BackPatchContainer/Control/SideStatButtonControl"]
layout_mode = 0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("2_7xk62")

[node name="Label" type="Label" parent="BackPatchContainer/Control/SideStatButtonControl/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_u12om")
theme_override_font_sizes/font_size = 32
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="BackPatchContainer/Control/SideStatButtonControl/TextureRect"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopStatButtonControl" type="Control" parent="BackPatchContainer/Control" node_paths=PackedStringArray("button_texture", "button")]
clip_contents = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -135.0
offset_top = -56.0
offset_right = -7.0
offset_bottom = 8.0
grow_horizontal = 0
script = ExtResource("3_pfyt3")
vertical = true
grow_speed = 300.0
button_texture = NodePath("TextureRect")
button = NodePath("TextureRect/Button")

[node name="TextureRect" type="TextureRect" parent="BackPatchContainer/Control/TopStatButtonControl"]
layout_mode = 0
offset_top = 64.0
offset_right = 128.0
offset_bottom = 128.0
texture = ExtResource("2_7xk62")

[node name="Label" type="Label" parent="BackPatchContainer/Control/TopStatButtonControl/TextureRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_u12om")
theme_override_font_sizes/font_size = 32
text = "Start"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="BackPatchContainer/Control/TopStatButtonControl/TextureRect"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Background" type="NinePatchRect" parent="BackPatchContainer"]
layout_mode = 2
texture = ExtResource("3_2484v")
patch_margin_left = 21
patch_margin_top = 8
patch_margin_right = 21
patch_margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="BackPatchContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="BackPatchContainer/HBoxContainer"]
layout_mode = 2

[node name="QueInputButtonControl" parent="BackPatchContainer/HBoxContainer/HBoxContainer" instance=ExtResource("6_ua6n5")]
layout_mode = 2
